--- a/data/projects/Talk00.yaml
+++ b/data/projects/Talk00.yaml
@@ -1,9 +1,9 @@
 modalID: 1
-title: "Encerramento"
+title: "Credenciamento"
 subtitle: "First Subtitle"
 date: 2019-11-30
-startsAt: 16:30
-endsAt: 16:45
+startsAt: 08:30
+endsAt: 09:00
 img: roundicons.png
 preview: faceholder.png
 client: 
