--- a/config.toml
+++ b/config.toml
@@ -183,7 +183,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     # at the root of this Hugo site.
     # For more informtion take a look at the README.
     title = "Submissão de Palestras"
-    subtitle = "<br><br> [As submissões de palestras e pôsters estão abertas](https://forms.gle/hBGnao9KT35iUW6w6)!<br> Incentivamos a submissão de palestrantes de **grupos subrepresentados na programação (mulheres, pessoas negras, pessoas LGBT+, pessoas com deficiência, e outras minorias)** e de **todos os níveis de experiência**, inclusive iniciantes - caso precise de qualquer tipo de mentoria, envie um e-mail para [satrdaysp@gmail.com](mailto:satrdaysp@gmail.com) ou uma DM no [twitter](https://twitter.com/satRdaySP), e uma pessoa da equipe entrará em contato !<br> "
+    subtitle = "<br><br> [As submissões de palestras e pôsters estão abertas](https://forms.gle/hBGnao9KT35iUW6w6)!<br> Incentivamos a submissão de palestrantes de **grupos subrepresentados na programação (mulheres, pessoas negras, pessoas LGBT+, pessoas com deficiência, e outras minorias)**, assim como de todos os níveis de experiência, inclusive iniciantes. Caso precise de qualquer tipo de mentoria, envie um e-mail para [satrdaysp@gmail.com](mailto:satrdaysp@gmail.com) ou uma DM no [twitter](https://twitter.com/satRdaySP), e uma pessoa da equipe entrará em contato !<br> "
     bg = true
 
     [params.portfolio.modal]
