--- a/data/projects/Talk07.yaml
+++ b/data/projects/Talk07.yaml
@@ -1,9 +1,9 @@
 modalID: 2
-title: "Mesa redonda: Comunidades"
+title: "Palestra de Convidado(a): Bruna Wundervald"
 subtitle: ""
 date: 2019-11-30
 startsAt: 14:30
-endsAt: 15:15
+endsAt: 15:00
 img: roundicons.png
 preview: faceholder.png
 client: 
