--- a/data/projects/Talk02.yaml
+++ b/data/projects/Talk02.yaml
@@ -1,6 +1,6 @@
 modalID: 2
-title: "Lightning Talks - Palestras curtas de 5 minutos"
-subtitle: "Palestras curtas de 5 minutos"
+title: "Sessão Oral 1 - Palestras de 15 minutos"
+subtitle: "Palestras de 15 minutos"
 date: 2019-11-30
 startsAt: 09:30
 endsAt: 10:30
