--- a/data/projects/Talk04.yaml
+++ b/data/projects/Talk04.yaml
@@ -1,5 +1,5 @@
 modalID: 2
-title: "Sessão Oral 1 - Palestras de 15 minutos"
+title: "Mesa redonda: Comunidades <br> <p>Convidados(as): Haydee Svab (R-Ladies São Paulo), Beatriz Milz (The Carpentries), Marcelo Ventura (R Brasil), Hedibert Lopes (Comunidade acadêmica)</p>"
 subtitle: ""
 date: 2019-11-30
 startsAt: 11:00
