--- a/data/projects/Talk09.yaml
+++ b/data/projects/Talk09.yaml
@@ -1,9 +1,9 @@
 modalID: 2
-title: "Palestra de Convidado: Em breve"
+title: "Palestra de Convidado(a): Tiago Mendonça"
 subtitle: "Em breve"
 date: 2019-11-30
-startsAt: 15:45
-endsAt: 16:30
+startsAt: 15:30
+endsAt: 16:00
 img: roundicons.png
 preview: faceholder.png
 client: Em breve
