--- a/data/projects/Talk10.yaml
+++ b/data/projects/Talk10.yaml
@@ -1,20 +1,13 @@
-modalID: 1
-title: "Encerramento"
-subtitle: "First Subtitle"
+modalID: 2
+title: "Palestra de Convidado(a): Daniel Falbel"
+subtitle: "Em breve"
 date: 2019-11-30
-startsAt: 16:30
-endsAt: 16:45
+startsAt: 16:00
+endsAt: 16:30
 img: roundicons.png
 preview: faceholder.png
-client: 
+client: Em breve
 clientLink: "#"
-category: Category 1
-description: "Describe 1"
+category: Em breve
+description: "Em breve"
 talk: false
-
-
-
-
-
-
-
