--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     title = "satRday São Paulo"
     subtitle = "Conferência de usuários(as) da Linguagem R em 30 de novembro de 2019"
     bg = true
-    buttonText = "Inscreva-se"
+    buttonText = "Inscreva-se até 27/11"
 
 
   # About [Services] section
@@ -183,7 +183,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
     # at the root of this Hugo site.
     # For more informtion take a look at the README.
     title = "Submissão de Palestras"
-    subtitle = "<br><br> [As submissões de palestras e pôsters estão abertas](https://forms.gle/hBGnao9KT35iUW6w6)!<br> Incentivamos a submissão de palestrantes de **grupos subrepresentados na programação (mulheres, pessoas negras, pessoas LGBT+, pessoas com deficiência, e outras minorias)**, assim como de todos os níveis de experiência, inclusive iniciantes. Caso precise de qualquer tipo de mentoria, envie um e-mail para [satrdaysp@gmail.com](mailto:satrdaysp@gmail.com) ou uma DM no [twitter](https://twitter.com/satRdaySP), e uma pessoa da equipe entrará em contato !<br> "
+    subtitle = "<br><br> As submissões de palestras e pôsters estão encerradas. <br> Incentivamos a submissão de palestrantes de **grupos subrepresentados na programação (mulheres, pessoas negras, pessoas LGBT+, pessoas com deficiência, e outras minorias)**, assim como de todos os níveis de experiência, inclusive iniciantes. Caso precise de qualquer tipo de mentoria, envie um e-mail para [satrdaysp@gmail.com](mailto:satrdaysp@gmail.com) ou uma DM no [twitter](https://twitter.com/satRdaySP), e uma pessoa da equipe entrará em contato !<br> "
     bg = true
 
     [params.portfolio.modal]
@@ -196,7 +196,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
 
   # Important Dates [About] section
   [params.about]
-    enable = true
+    enable = false
     bg = true
     title = "Datas importantes"
     subtitle = ""
@@ -209,7 +209,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
       img = "1.jpg"
       date = "18/10/2019"
       title = "Início de submissão de palestras"
-      description = " [Submeta através deste link](https://forms.gle/hBGnao9KT35iUW6w6)!"
+      description = " "
 
       [[params.about.events]]
       #img = "1.jpg"
@@ -549,16 +549,31 @@ disableKinds = ["taxonomy", "taxonomyTerm"]
       logo = "Insper-positivo.png"
       link = "https://www.insper.edu.br/"
       alt = "Insper"
+
+    [[params.clients]]
+      logo = "cursor1-41.png"
+      link = "https://www.curso-r.com/"
+      alt = "Curso-R"      
       
     [[params.clients]]
       logo = "logo_RED_Asset.jpg"
       link = "https://redasset.com.br/"
       alt = "RED Asset"
+
+ 
+  
  
     [[params.clients]]
       logo = "Marca_C6BANK_positivo.png"
       link = "https://c6bank.com.br"
-      alt = "C6 Bank"      
+      alt = "C6 Bank"   
+
+
+    [[params.clients]]
+      logo = "clearsale.jpg"
+      link = "https://br.clear.sale/"
+      alt = "ClearSale"   
+
   
   [params.diversity]
     enable = true
