--- a/data/projects/Talk10.yaml
+++ b/data/projects/Talk10.yaml
@@ -1,5 +1,5 @@
 modalID: 2
-title: "Palestra de Convidado(a): Daniel Falbel"
+title: "Palestra de Convidado(a): Daniel Falbel <br><p>Título da palestra: Em breve</p>"
 subtitle: "Em breve"
 date: 2019-11-30
 startsAt: 16:00
