--- a/data/speakers/07marceloventura.toml
+++ b/data/speakers/07marceloventura.toml
@@ -1,4 +1,4 @@
-img = "rlogo.png"
+img = "marceloventura.jpg"
 name = "Marcelo Ventura Freire"
 organisation = "EACH/USP e R-Brasil"
 role = "Convidado - Mesa Redonda e Palestrante"
