--- a/data/speakers/11leonardo.toml
+++ b/data/speakers/11leonardo.toml
@@ -1,4 +1,4 @@
-img = "rlogo.png"
+img = "leonardo.jpg"
 name = "Leonardo Goes Shibata"
 organisation = "Escritório das Nações Unidas de Serviços para Projetos, Banco Interamericano de Desenvolvimento, Unicamp"
 role = "Palestrante"
