--- a/data/speakers/12mariamarinho.toml
+++ b/data/speakers/12mariamarinho.toml
@@ -1,4 +1,4 @@
-img = "rlogo.png"
+img = "mariamarinho.jpg"
 name = "Maria Marinho"
 organisation = "SulAmérica, R-Ladies São Paulo, PyLadies São Paulo"
 role = "Palestrante"
