--- a/data/speakers/13joaohenrique.toml
+++ b/data/speakers/13joaohenrique.toml
@@ -1,4 +1,4 @@
-img = "rlogo.png"
+img = "joaomorais.jpg"
 name = "João Henrique de Araujo Morais"
 organisation = "ICT-UNIFESP"
 role = "Palestrante"
