--- a/data/speakers/14rodolfo.toml
+++ b/data/speakers/14rodolfo.toml
@@ -1,4 +1,4 @@
-img = "rlogo.png"
+img = "rodolfo.jpg"
 name = "Rodolfo Augusto de Araujo Almeida"
 organisation = "Vortex Media"
 role = "Palestrante"
