colcoando título da palestra

--- a/data/projects/Talk10.yaml
+++ b/data/projects/Talk10.yaml
@@ -1,6 +1,6 @@
 modalID: 2
-title: "Palestra de Convidado(a): Daniel Falbel <br><p>Título da palestra: Em breve</p>"
-subtitle: "Em breve"
+title: "Palestra de Convidado(a): Daniel Falbel <br><p>TensorFlow 2.0 no R</p>"
+subtitle: "TensorFlow 2.0 no R"
 date: 2019-11-30
 startsAt: 16:00
 endsAt: 16:30
