atualiza cronograma e palestrantes

--- a/data/projects/Talk00.yaml
+++ b/data/projects/Talk00.yaml
@@ -1,5 +1,5 @@
 modalID: 1
-title: "Credenciamento"
+title: "Credenciamento e Welcome Coffe"
 subtitle: "First Subtitle"
 date: 2019-11-30
 startsAt: 08:30
