--- a/data/speakers/03tiagomendonca.toml
+++ b/data/speakers/03tiagomendonca.toml
@@ -1,10 +1,10 @@
-img = "rlogo.png"
+img = "tiagomendonca.jpg"
 name = "Tiago Mendonça dos Santos"
 organisation = "Insper"
 role = "Palestrante convidado"
-#social = [
+social = [
 #        ["fa-twitter", "#"],
 #        ["fa-github", "#"],
-#        ["fa-linkedin", "#"],
+       ["fa-linkedin", "https://www.linkedin.com/in/tiagomendonca1/"],
 #        ["fa-globe", "#"]
-#      ]
+     ]
