atualiza nome de palestrante

--- a/data/projects/Talk02.yaml
+++ b/data/projects/Talk02.yaml
@@ -8,7 +8,7 @@ title: " Lightning Talks - Palestras de 8 minutos <br>
 
 <li>João Henrique de Araujo Morais - rtabnetsp: Pacote R para Extração e Tratamento de Dados de Indicadores Saúde de São Paulo</li><br>
 
-<li>Ianní Welba Muliterno Bezerra - Projeto em Shiny para aplicação de testes A/B bayesianos</li><br>
+<li>Ianní Muliterno - Projeto em Shiny para aplicação de testes A/B bayesianos</li><br>
 
 
  </ul>
