--- a/data/speakers/10ianni.toml
+++ b/data/speakers/10ianni.toml
@@ -1,5 +1,5 @@
 img = "ianni.jpg"
-name = "Ianní Welba Muliterno Bezerra"
+name = "Ianní Welba Muliterno"
 organisation = "PRICED/UFPE"
 role = "Palestrante"
 social = [
