--- a/data/projects/Talk07.yaml
+++ b/data/projects/Talk07.yaml
@@ -1,5 +1,5 @@
 modalID: 2
-title: "Palestra de Convidado(a): Bruna Wundervald<br> <p>Título da palestra: Em breve</p>"
+title: "Palestra de Convidado(a): Bruna Wundervald<br> <p>Título da palestra:  O tidyverse para Aprendizado de Máquina</p>"
 subtitle: ""
 date: 2019-11-30
 startsAt: 14:30
