--- a/data/projects/Talk09.yaml
+++ b/data/projects/Talk09.yaml
@@ -1,5 +1,5 @@
 modalID: 2
-title: "Palestra de Convidado(a): Tiago Mendonça <br><p>Título da palestra: Em breve</p>"
+title: "Palestra de Convidado(a): Tiago Mendonça <br><p>Título da palestra: Uma Aplicação de MDS ao Mercado Automotivo</p>"
 subtitle: "Em breve"
 date: 2019-11-30
 startsAt: 15:30
